[gd_scene load_steps=10 format=3 uid="uid://dmb8ft2iphr2s"]

[ext_resource type="Texture2D" uid="uid://bvfh1qrphupki" path="res://sprites/car/turret.png" id="1_riysx"]
[ext_resource type="Script" path="res://enemies/car.gd" id="1_s46qb"]
[ext_resource type="Texture2D" uid="uid://bo7xyownggsdl" path="res://sprites/car/main.png" id="1_y0gqf"]
[ext_resource type="Texture2D" uid="uid://bvkblkxdp5yjl" path="res://sprites/explosions/gun.png" id="4_flhvc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2tylo"]
size = Vector2(461, 346)

[sub_resource type="CircleShape2D" id="CircleShape2D_b8ckh"]
radius = 575.275

[sub_resource type="Animation" id="Animation_4rcep"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterBody2D/Turret/RayCast2D/Line2D:width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharacterBody2D/Turret/RayCast2D2/Line2D:width")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_vlgxe"]
resource_name = "aim"
length = 2.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterBody2D/Turret/RayCast2D/Line2D:width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8, 1.8, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 10.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharacterBody2D/Turret/RayCast2D2/Line2D:width")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8, 1.8, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 10.0, 0.0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"fire"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8wamm"]
_data = {
"RESET": SubResource("Animation_4rcep"),
"aim": SubResource("Animation_vlgxe")
}

[node name="Car" type="PathFollow2D"]
script = ExtResource("1_s46qb")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(-53.5, 0)
shape = SubResource("RectangleShape2D_2tylo")

[node name="Main" type="Sprite2D" parent="CharacterBody2D"]
rotation = 1.5708
texture = ExtResource("1_y0gqf")

[node name="Turret" type="Node2D" parent="CharacterBody2D"]

[node name="Sprite" type="Sprite2D" parent="CharacterBody2D/Turret"]
rotation = 1.5708
texture = ExtResource("1_riysx")

[node name="RayCast2D" type="RayCast2D" parent="CharacterBody2D/Turret"]
position = Vector2(103, -26)
target_position = Vector2(480, 0)

[node name="Line2D" type="Line2D" parent="CharacterBody2D/Turret/RayCast2D"]
points = PackedVector2Array(0, 0)
width = 0.0
default_color = Color(0.768627, 0.207843, 0.254902, 1)

[node name="RayCast2D2" type="RayCast2D" parent="CharacterBody2D/Turret"]
position = Vector2(102, 29)
target_position = Vector2(480, 0)

[node name="Line2D" type="Line2D" parent="CharacterBody2D/Turret/RayCast2D2"]
points = PackedVector2Array(-1, -1)
width = 0.0
default_color = Color(0.768627, 0.207843, 0.254902, 1)

[node name="GunFire" type="Sprite2D" parent="CharacterBody2D/Turret"]
modulate = Color(1, 1, 1, 0)
position = Vector2(144, -27)
rotation = 1.5708
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_flhvc")

[node name="GunFire2" type="Sprite2D" parent="CharacterBody2D/Turret"]
modulate = Color(1, 1, 1, 0)
position = Vector2(146, 29)
rotation = 1.5708
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_flhvc")

[node name="NoticeArea" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 2
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoticeArea"]
shape = SubResource("CircleShape2D_b8ckh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8wamm")
}

[connection signal="body_entered" from="NoticeArea" to="." method="_on_notice_area_body_entered"]
[connection signal="body_exited" from="NoticeArea" to="." method="_on_notice_area_body_exited"]
